sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: illegal start of simple pattern
  for(int i=0;i<getNombreValeurs();i++){
           ^AlgBubbleSort1:3: error: '<-' expected but ';' found.
  for(int i=0;i<getNombreValeurs();i++){
             ^AlgBubbleSort1:3: error: '<-' expected but ';' found.
  for(int i=0;i<getNombreValeurs();i++){
                                  ^AlgBubbleSort1:3: error: illegal start of simple pattern
  for(int i=0;i<getNombreValeurs();i++){
                                      ^AlgBubbleSort1:6: error: illegal start of simple expression
} 
^